# mdt-app-example

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
tests/: CMakeLists.txt
tests/src/: RunTest.cpp
